subdir('color')
subdir('images')
subdir('layouts')
subdir('sounds')
subdir('template')
subdir('themes')

install_data(
  sources     : 'eflete.desktop',
  install_dir : join_paths(dir_data, 'applications')
)

install_data(
  sources     : 'images/eflete.svg',
  install_dir : join_paths(dir_data, 'icons')
)
